syntax = "proto3";

package powerssl.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

option go_package = "powerssl.io/api/v1;api";

service CertificateService {
  rpc CreateCertificate (CreateCertificateRequest) returns (Certificate) {
    option (google.api.http) = {
      post: "/v1/certificates"
      body: "certificate"
    };
  }
  rpc DeleteCertificate (DeleteCertificateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/{name=certificates/*}"
    };
  }
  rpc GetCertificate (GetCertificateRequest) returns (Certificate) {
    option (google.api.http) = {
      get: "/v1/{name=certificates/*}"
    };
  }
  rpc ListCertificates (ListCertificatesRequest) returns (ListCertificatesResponse) {
    option (google.api.http) = {
      get: "/v1/certificates"
    };
  }
  rpc UpdateCertificate (UpdateCertificateRequest) returns (Certificate) {
    option (google.api.http) = {
      patch: "/v1/{certificate.name=certificates/*}"
      body: "certificate"
    };
  }
}

message CreateCertificateRequest {
  Certificate certificate = 1;
}

message DeleteCertificateRequest {
  string name = 1;
}

message Certificate {
  string name = 1;
  map<string, string> labels = 2;
  bool discarded = 3;
  google.protobuf.Timestamp create_time = 4;
  google.protobuf.Timestamp update_time = 5;
  google.protobuf.Timestamp discard_time = 6;
}

message GetCertificateRequest {
  string name = 1;
}

message ListCertificatesRequest {
  uint32 page_size = 1;
  string page_token = 2;
  bool show_discarded = 3;
}

message ListCertificatesResponse {
  repeated Certificate certificates = 1;
  string next_page_token = 2;
}

message UpdateCertificateRequest {
  Certificate certificate = 1;
  google.protobuf.FieldMask update_mask = 2;
}
